...
              ),
            ),

            const SizedBox(height: 24),

            Text(
              '¡Bienvenido!',
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Color(0xFF4D4D4D),
                fontSize: 24,
                fontFamily: 'Montserrat',
                fontWeight: FontWeight.w700,
...
